fix scss overflow to overflow-x in slide scss

--- a/src/app/pages/home/slide/slide.component.scss
+++ b/src/app/pages/home/slide/slide.component.scss
@@ -1,7 +1,7 @@
 .slide {
   display: flex;
   flex-wrap: nowrap;
-  overflow: scroll;
+  overflow-x: scroll;
 
   &__element {
     margin-right: 10px;
